--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,8 +114,9 @@ body.dark-theme {
 
 
 /*=============== BASE ===============*/
-* {
-  box-sizing: border-box;
+
+*, *::before, *::after{
+  box-sizing:border-box;
   padding: 0;
   margin: 0;
 }
