--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,22 +94,16 @@ body.dark-theme {
 
 .change-theme, .change-theme-name {
   color: var(--text-color);
-  font-size: var(--small-font-size);
+  font-size: var(--small-font-size);  
 }
 
 .change-theme {
   cursor: pointer;
   font-size: 1rem;
 }
-
-
-.change-theme-name--dark:before{
-  content: "Ligth ";
-
-}
-.change-theme-name--light:before{
-  content: "Dark ";
-
+.change-theme-name--light.change-theme-name--dark{
+  margin-right: -25px;
+  margin-left:25px;
 }
 
 
